--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
     <title>Solution module 2</title>
 </head>
 <body>
