module2 solution complete now with space between sections

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,7 +9,8 @@
 <h1>Our Menu</h1>
 
 <div class="row">
-    <section class="col-lg-4 col-md-6">
+    <div class="col-lg-4 col-md-6">
+    <section >
         <p class="title">Chicken</p>
 
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -23,7 +24,9 @@
             nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero,
             sit amet adipiscing sem neque sed ipsum.</p>
     </section>
-        <section class="col-lg-4 col-md-6">
+    </div>
+    <div class="col-lg-4 col-md-6">
+        <section >
             <p class="title">Beef</p>
 
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -43,7 +46,9 @@
                 libero,
                 sit amet adipiscing sem neque sed ipsum.</p>
         </section>
-        <section class="col-lg-4 col-md-12">
+    </div>
+    <div class="col-lg-4 col-md-12">
+        <section >
             <p class="title">Sushi</p>
 
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -63,6 +68,7 @@
                 libero,
                 sit amet adipiscing sem neque sed ipsum.</p>
         </section>
+    </div>
 </div>
 
 </body>
